--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
     "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "github:GreepTheSheep/node-ytdl-core"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
