--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -14,7 +14,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/ffmpeg": "^1.0.4",
     "@types/yt-search": "^2.3.2"
   },
   "author": "",
